<resources>
    <string name="jugar">PLAY</string>
    <string name="choose_the_difficulty">Choose the difficulty:</string>
    <string name="dif_dificil">Hard</string>
    <string name="dif_moderada">Moderate</string>
    <string name="dif_facil">Easy</string>
    <string name ="acercade">About app</string>
    <string name ="puntuacion">Score: </string>
    <string name ="intentosrestantes">Remaining attempts: </string>
    <string name="puntuacionconseguida">Points earned</string>
    <string name="pausar">PAUSE</string>
    <string name="continuar">CONTINUE</string>
    <string name="videos">Videos</string>
    <string name="mute">🔊</string>



    <string name="correct">Correct!, it was</string>
    <string name="wrong">You failed.</string>
    <string name="try_again">Try again</string>


    <string name="app_name">Guess Where I Am</string>
    <string name="about_title">Game: Guess Where I Am</string>
    <string name="version">Version 1.0</string>
    <string name="authors">Authors: Jesus Velasco and Julián Urraca</string>
    <string name="description">
        This game was developed as part of the challenge for the
        Multimedia Programming module at IES Maestre de Calatrava.
    </string>
    <string name="btn_back">Back</string>
    <string name="menu_about">About</string>
    <string name="norte">North</string>
    <string name="sur">South</string>
    <string name="este">East</string>
    <string name="oeste">West</string>
    <string name="ya_acertaste_esta_imagen">You already guessed this image</string>
    <string name="juego_terminado_sin_intentos_restantes_o_todas_las_im_genes_acertadas">
        Game over, no attempts left or all images guessed.
    </string>
    <!-- POR TRADUCIR-->
    <string name="pantalla_en_construccion">Screen under construction</string>
    <string name="mejor_puntuacion">"Best score: "</string>
</resources>
